--- a/utils/templates/admin/utils/accounting/change_list.html
+++ b/utils/templates/admin/utils/accounting/change_list.html
@@ -14,6 +14,9 @@
 <li>
     <a href="{%url 'admin:utils_accounting_change' 'simulate' %}" class="btn btn-high btn-success">{% trans "Simular fechamento" %}</a>
 </li>
+<li>
+    <a href="{%url 'admin:utils_accounting_change' 'simulate_sandbox' %}" class="btn btn-high btn-success">{% trans "(Sandbox) Simular fechamento" %}</a>
+</li>
 {% endblock %}
 
 {% block content %}
