atualização do endereço de envio.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -283,7 +283,7 @@
                 <div class="modal-body">
                     <p><strong>{% trans "Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay." %}</strong></p>
                     <br>
-                    <p class="center">201 Main St<br />West Newbury<br />MA 01985</p>
+                    <p class="center">1835 NW 112 Ave #172<br />Miami, FL<br />33172</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
