comentários nos detalhes:
ajuste na seleção de idioma no envio de email quando ativa um usuário;
salvar informação se um envio é sandbox para não ser levado em conta no
processo de fechamento;
opção para simular o fechamento dos envios sandbox.

--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1470,6 +1470,16 @@ footer.fixed-footer{
     padding: 0;
 }
 
+.contact-us-success{
+    background-color: green;
+    color: white;
+}
+
+.contact-us-failure{
+    background-color: red;
+    color: white;
+}
+
 @media (max-width: 767px){
     .navbar-brand img:last-child {
         display: none;
