--- a/html/templates/ajuda.html
+++ b/html/templates/ajuda.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Vendedor Online Internacional</title>
-    <meta property="og:image" content="../static/img/vendedorinternacional.jpg"/>
+    <meta property="og:image" content="/static/img/vendedorinternacional.jpg"/>
     <meta name="description" content="Vendedor online internacional. Nossos serviços: Treinamento em vendas internacionais, Private label, serviço de redirecionamento, redirecionamento brasil"/>
     <meta property="og:title" content="Vendedor internacional"/>
     <meta property="og:site_name" content="Vendedor internacional"/>
@@ -18,17 +18,17 @@
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,7 +56,7 @@
         olark.identify('3914-306-10-7635');
     </script>
     <!-- end olark code -->
-
+    <script src="/static/jsi18n/{{ LANGUAGE_CODE }}/djangojs.js"></script>
 </head>
 
 <body id="page-top" class="index red-br">
@@ -69,7 +69,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../static/img/logo_sup.png" /><img src="../static/img/logo_bottom.png" width="175" /></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="/static/img/logo_sup.png" /><img src="/static/img/logo_bottom.png" width="175" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -122,8 +122,8 @@
                 <h3>Endereço VOI</h3>
                 <p>Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay.</p>
 
-                <img src="../static/img/ajuda-endereco-1.png" width="100%" /><br><br>
-                <img src="../static/img/ajuda-endereco-2.png" width="100%" /><br><br>
+                <img src="/static/img/ajuda-endereco-1.png" width="100%" /><br><br>
+                <img src="/static/img/ajuda-endereco-2.png" width="100%" /><br><br>
             </div>
             <div id="FAQ" class="tab-pane fade">
             </div>
@@ -142,31 +142,32 @@
             <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
+                        {% csrf_token %}
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Digite aqui seu nome *" id="name" required data-validation-required-message="Campo obrigatório">
+                                    <input type="text" class="form-control" name="name" placeholder="Digite aqui seu nome *" id="name" required data-validation-required-message="Campo obrigatório">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Digite aqui seu email *" id="email" required data-validation-required-message="Campo obrigatório">
+                                    <input type="email" class="form-control" name="email" placeholder="Digite aqui seu email *" id="email" required data-validation-required-message="Campo obrigatório">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Digite aqui seu telefone de contato *" id="phone" required data-validation-required-message="Campo obrigatório">
+                                    <input type="tel" class="form-control" name="tel" placeholder="Digite aqui seu telefone de contato *" id="phone" required data-validation-required-message="Campo obrigatório">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Escreva sua mensagem *" id="message" required data-validation-required-message="Campo obrigatório"></textarea>
+                                    <textarea class="form-control" name="message" placeholder="Escreva sua mensagem *" id="message" required data-validation-required-message="Campo obrigatório"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl" id="contactus-form">Enviar</button>
+                                <div id="contact-us-feedback"></div>
+                                <button type="button" class="btn btn-xl" id="contactus-form">Enviar</button>
                             </div>
                         </div>
                     </form>
@@ -202,20 +203,23 @@
         </div>
     </footer>
 
+    <!-- Loading basta dar display block-->
+    <div class="loading" style="display: none;">Carregando...</div>
+
     <!-- jQuery -->
-    <script src="../static/externo/jquery/jquery.min.js"></script>
+    <script src="/static/externo/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../static/externo/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/externo/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="../static/js/jqBootstrapValidation.js"></script>
+    <script src="/static/js/jqBootstrapValidation.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="../static/js/applications.js"></script>
+    <script src="/static/js/applications.js"></script>
 
 </body>
 
