--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -192,10 +192,14 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><span class="glyphicon glyphicon-cog "></span>  {% trans "Olá" %}, {{ user.first_name }} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+{% comment %}
+                            {% if user.first_name != 'Administrador' %}
                             <li class="{% block edituser %}{% endblock %}">
                                 <a href="{% url 'user_edit' %}"><i class="fa fa-fw fa-user"></i> {% trans "Editar cadastro" %}</a>
                             </li>
                             <li class="divider"></li>
+                            {% endif %}
+{% endcomment %}
                             <li class="">
                                 <a href="{% url 'logout' %}"><i class="fa fa-fw fa-power-off"></i> {% trans "sair" %}</a>
                             </li>
