--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -217,7 +217,7 @@ fieldset[disabled] .btn-xl.active {
 
   .sistema .navbar-header{
      width: 249px;
-     margin-top: 6px;
+     margin-top: -1px;
   }
   .sistema .modal-dialog {
         width: 1195px;
@@ -242,8 +242,8 @@ fieldset[disabled] .btn-xl.active {
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
-    margin-top: 4px;
-    margin-left: -60px !important;
+    margin-top: -10px;
+    margin-left: -15px !important;
   }
   .navbar-custom .navbar-nav > .active > a {
     border-radius: 3px;
@@ -801,8 +801,12 @@ body {
 }
 
 .navbar-brand img:first-child{
-    width: 55px;
+    width: 80px;
     float: left;
+}
+
+.navbar-brand img.logo-img-plataforma{
+    width: 60px;
 }
 
 .navbar-custom .nav li a{
@@ -1004,7 +1008,7 @@ table th a{
 
 .nav > li.tutorial{
     position: fixed;
-    top: 50px;
+    top: 85px;
     left: 0;
     background: red;
     color: #fff;
@@ -1409,7 +1413,7 @@ form small{
 }
 
 .nav > li.tutorial.adress{
-    top: 110px;
+    top: 170px;
     background: #286090;
 }
 
