--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -41,8 +41,7 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
                     {% if LANGUAGE_CODE == 'pt-br' %}
-                    <img src="/static/img/logo_sup.png" />
-                    <img width="175px" src="/static/img/logo_bottom.png" />
+                    <img src="/static/img/logo-maquina-vendas.png" />
                     {% else %}
                     <img src="/static/img/logo-en.png" style="width: 275px;" />
                     {% endif %}
@@ -52,7 +51,7 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <li>
-                        <a href="/"><strong><i class="fa fa-sign-in"></i></strong> {% trans "Voltar Site Institucional" %}</a>
+                        <a href="/login/"><strong><i class="fa fa-sign-in"></i></strong> {% trans "Login" %}</a>
                     </li>
                 </ul>
             </div>
@@ -93,9 +92,9 @@
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>-->
+                        </li>
                         <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
-                        </li><!--
+                        </li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>-->
                     </ul>
