--- a/html/templates/email/registration-validation.html
+++ b/html/templates/email/registration-validation.html
@@ -10,8 +10,7 @@
 <div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
     <a href="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/">
         {% if LANGUAGE_CODE == 'pt-br' %}
-        <img width="75" src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_sup.png">
-        <img width="200" src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo_bottom.png">
+        <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo-maquina-vendas.png" width="100px" />
         {% else %}
         <img src="{{ protocol}}://{{ request.CURRENT_DOMAIN }}/static/img/logo-en.png">
         {% endif %}
