troca para máquina de vendas, logo da tela de login.

--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -32,7 +32,7 @@
 <body id="page-top" class="login">
     <div id="login-box">
             {% if LANGUAGE_CODE == 'pt-br' %}
-            <img src="/static/img/logosite.png" />
+            <img src="/static/img/logo-maquina-vendas.png" width="200px" />
             {% else %}
             <img src="/static/img/logo-en.png" style="width: 275px;" />
             {% endif %}
