--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -102,6 +102,10 @@
                         </ul>
                     </li>
                     {% endif %}
+
+                    <li>
+                        <a href="/ajuda.html#contact" target="_blank"><i class="fa fa-fw fa-envelope"></i> {% trans "Contato" %}</a>
+                    </li>
 {% comment %}
                     <li class="{% block lotes-u %}{% endblock %}">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %} <b class="caret"></b></a>
