--- a/html/templates/shipment_list.html
+++ b/html/templates/shipment_list.html
@@ -11,7 +11,7 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Lista de Envios EUA" %}</h1>
+          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Lista de Envios" %}</h1>
           <div class="row">
               <div class="filtros col-md-12">
                 <h3><i class="fa fa-filter"></i> {% trans "Filtros" %}</h3>  <br>
