--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -32,7 +32,7 @@
 <body id="page-top" class="login">
     <div id="login-box">
             {% if LANGUAGE_CODE == 'pt-br' %}
-            <img src="/static/img/logo-maquina-vendas.png" width="200px" />
+            <img src="/static/img/logo-maquina-vendas.png" width="150px" />
             {% else %}
             <img src="/static/img/logo-en.png" style="width: 275px;" />
             {% endif %}
@@ -61,9 +61,12 @@
                 <input type="submit" id="send-btn" value="{{ log_in }}" />
             </form>
             <div class="infos">
-                <a href="#" id="forgot-password-btn">{% trans "Esqueci Minha Senha" %}</a>
+                <a href="#" class="download" id="forgot-password-btn">{% trans "Esqueci Minha Senha" %}</a>
                 <a class="btn-azul" href="/user/registration"><i class="fa fa-paper-plane"></i> {% trans "Quero me Cadastrar" %}</a>
             </div>
+        <div class="bottom-login">
+            <p>Caso tenha alguma dúvida, <a class="download" href="/ajuda.html#contact">Clique Aqui</a> e entre em contato conosco.</p>
+        </div>
     </div>
 
      <!-- Modal confirmacao de acao-->
