adição da parte contatos no login e área logada.

--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -65,7 +65,7 @@
                 <a class="btn-azul" href="/user/registration"><i class="fa fa-paper-plane"></i> {% trans "Quero me Cadastrar" %}</a>
             </div>
         <div class="bottom-login">
-            <p>Caso tenha alguma dúvida, <a class="download" href="/ajuda.html#contact">Clique Aqui</a> e entre em contato conosco.</p>
+            <p>{% blocktrans %}Caso tenha alguma dúvida <a class="download" href="/ajuda.html#contact">clique aqui</a> e entre em contato conosco.{% endblocktrans %}</p>
         </div>
     </div>
 
