--- a/html/templates/shipment_details.html
+++ b/html/templates/shipment_details.html
@@ -227,7 +227,10 @@
 
                <div class="col-md-12 itens-progress">
                    <div class="col-md-3 center">
-                        <label><i class="fa fa-2x fa-fw fa-plus-square"></i><br>{% trans "Preparando para Envio" %}</label>
+                        <label>
+                            <i class="fa fa-2x fa-fw fa-plus-square"></i><br>{% trans "Preparando para Envio" %}<br>
+                            <span class="previsao">( {% trans "Previsão: Até" %} 28/09/17 )</span>
+                        </label>
                    </div>
                    <div class="col-md-3 center">
                         <label><i class="fa fa-2x fa-file-pdf-o"></i><br>{% trans "Upload Etiqueta Caixa Autorizado" %}</label>
@@ -236,7 +239,10 @@
                         <label><i class="fa fa-2x fa-shopping-cart"></i><br>{% trans "Pagamento Autorizado" %}</label>
                    </div>
                    <div class="col-md-2 center">
-                        <label><i class="fa fa-2x fa-list-alt"></i><br>{% trans "Checagens Finais" %}</label>
+                        <label>
+                            <i class="fa fa-2x fa-list-alt"></i><br>{% trans "Checagens Finais" %}<br>
+                             <span class="previsao">( {% trans "Previsão: Até" %} 28/09/17 )</span>
+                        </label>
                    </div>
                    <div class="col-md-1 item-progress last">
                         <label><i class="fa fa-2x fa-thumbs-up"></i><br>{% trans "Enviado" %}</label>
