--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -861,6 +861,29 @@ body {
     font-weight: normal;
 }
 
+.suspenso{
+    position: absolute;
+    top: 3px;
+    left: 128px;
+    background: #c9302c;
+    color: #fff;
+    font-weight: bold;
+    padding: 2px 4px;
+    border-radius: 16px;
+    font-size: 14px;
+    width: 26px;
+    height: 22px;
+    display: block;
+    text-align: center;
+    line-height: 17px;
+}
+
+.input-min{
+    width: 235px;
+    float: left;
+    margin-right: 20px;
+}
+
 #login-box img{
     margin: 20px auto 35px auto;
     display: block;
