--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -216,6 +216,10 @@
                           <label><i class="fa fa-desktop"></i> {% trans "Comentários da Condição" %}:</label>
                           <input type="text" class="form-control row-condition-comments" name="product_condition_comments" value="{% if product.condition_comments %}{{ product.condition_comments }}{% endif %}" data-condition-comments="{% if product.condition_comments %}{{ product.condition_comments }}{% endif %}">
                         </div>
+                        <div class="form-group col-md-12">
+                            <label><i class="fa fa-thumb-tack"></i> {% trans "Localização na Warehouse" %}:</label>
+                            <input class="form-control" name="localizacao" value="" id="localizacao" type="text">
+                        </div>
 
                         <a class="btn btn-primary send-btn-async" href="javascript:void(0);"><i class="fa fa-check"></i> {% trans "Salvar" %}</a>
                         <a class="btn btn-danger fechar" href="javascript:void(0);"><i class="fa fa-times"></i> {% trans "Fechar" %}</a>
